# ooey-gooey-editor

./: .gitignore  CMakeLists.txt
docs/: architecture.md  coding-standards.md  refactoring-plan.md
docs/blog/: 01_deconstructing_wysiwyg_editors.md  02_building_the_foundation.md  03_live_reload_and_ast_engine.md  04_interactive_wysiwyg_overlays.md  05_ooey_framework_gaps_and_blockers.md  06_advanced_editor_ux_and_diagnostics.md  07_ooey_critique_and_actionable_roadmap.md  08_solidifying_the_editor_architecture.md
src/: AstService.cpp  AstService.hpp  DynamicInterpreter.cpp  DynamicInterpreter.hpp  EditorView.ooey  EditorViewModel.cpp  EditorViewModel.hpp  SelectionOverlay.cpp  SelectionOverlay.hpp  main.cpp
src/controllers/: EditorController.cpp  EditorController.hpp
src/domain/: models.hpp
src/menus/: EditorMenuBuilder.cpp  EditorMenuBuilder.hpp
src/services/: AstMutator.cpp  AstMutator.hpp  AstQuery.cpp  AstQuery.hpp  AstSerializer.cpp  AstSerializer.hpp  DslCompilerService.cpp  DslCompilerService.hpp  HistoryManager.cpp  HistoryManager.hpp  IAstMutator.hpp  IAstQuery.hpp  IAstSerializer.hpp  IDslCompilerService.hpp
src/viewmodels/: EditorViewModel.hpp
src/views/: PropertyCell.cpp  PropertyCell.hpp  PropertyGridConfigurator.cpp  PropertyGridConfigurator.hpp
tests/: test_ast_mutator.cpp  test_ast_query.cpp  test_ast_serializer.cpp  test_history_manager.cpp
